updated markdown support

--- a/blog/templates/blog/post.html
+++ b/blog/templates/blog/post.html
@@ -1,7 +1,7 @@
 {% load gravatar %}
 {% load markdownify %}
 {% load bleach_tags %}
-<div class="card" style="margin-top 8px;">
+<div class="card" style="margin-bottom 8px;">
     <div class="card-header">
         <a href="{% url 'accounts:view' pk=post.author.pk %}">
         <img src="{% gravatar_url post.author.email 30 %}" class="rounded-circle" /> {{ post.author }}</a>
