--- a/about/templates/about/index.html
+++ b/about/templates/about/index.html
@@ -1,8 +1,10 @@
 {% extends 'home/base.html' %}
+{% load markdownify %}
+{% load bleach_tags %}
 
 {% block content %}
 {% for c in content %}
 <h1>{{ c.heading_text }}</h1>
-<p>{{ c.body_text }}</p>
+<p>{{ c.body_text | markdown | safe | bleach }}</p>
 {% endfor %}
 {% endblock %}
